Make docker configuration more meaningful

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     web:
         build: .
         volumes:
-            - .:/myapp
+            - .:/zukan
         ports:
             - "4567:4567"
         depends_on:
