--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     db:
         image: postgres
         volumes:
-            - ./tmp/db:/var/lib/postgresql/data
+            - postgres:/var/lib/postgresql/data
         healthcheck:
             test: ["CMD-SHELL", "pg_isready"]
             interval: 10s
@@ -18,3 +18,5 @@ services:
         depends_on:
             db:
                 condition: service_healthy
+volumes:
+    postgres:
