--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,14 @@ services:
         image: postgres
         volumes:
             - postgres:/var/lib/postgresql/data
+        user: postgres
         healthcheck:
             test: ["CMD-SHELL", "pg_isready"]
             interval: 10s
             timeout: 5s
             retries: 5
+        environment:
+            - POSTGRES_PASSWORD=password
     web:
         build: .
         volumes:
