--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
         image: postgres
         volumes:
             - postgres:/var/lib/postgresql/data
+            - ./migration.sql:/docker-entrypoint-initdb.d/migration.sql
         user: postgres
         healthcheck:
             test: ["CMD-SHELL", "pg_isready"]
